OD-11404 fix theme source overflow
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@49652 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/editor/src/scss/components/theme.scss
+++ b/editor/src/scss/components/theme.scss
@@ -10,6 +10,7 @@
     border: 1px solid $gray;
     background: transparent;
     overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
     transition: all .3s;
   
